--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/Ilygos/MarioKartNodeJS/issues"
   },
-  "homepage": "https://github.com/Ilygos/MarioKartNodeJS#readme"
+  "homepage": "https://github.com/Ilygos/MarioKartNodeJS#readme",
+  "dependencies": {
+    "express": "^4.15.2",
+    "sat": "^0.6.0",
+    "socket.io": "^1.7.3"
+  }
 }
